# alpide_its_sim

./: .gitignore  CMakeLists.txt  README.md
alpide_dataflow_model/: Makefile  alpide_dataflow_model.doxygen  alpide_dataflow_model.pro  fromu_states.txt  rru_header_states.txt  rru_readout_states.txt  rru_valid_states.txt  settings.txt  tru_state.txt
alpide_dataflow_model/process/: process.py
alpide_toy_model/: Makefile  alpide_dataflow_model.pro  alpide_toy_model.doxygen  alpide_toy_model.pro  settings.txt
alpide_toy_model/process/: process.py  process_event_data.C
analysis/: CMakeLists.txt  DetectorStats.hpp  EventData.hpp  ITSLayerStats.hpp  ReadoutUnitStats.hpp  get_mc_event_multiplicity.C  get_num_events.cpp  get_num_events.hpp  misc.cpp  plot_mc_event_multiplicity.C
analysis/Multiplicity_distribution/: export_multiplicity_data.cxx  test_discrete_distribution.cxx
analysis/focal/: read_csv.hpp
analysis/py/: get_event_data.py  get_loss_multiplicity.py  plot_frame_readout_efficiency.ipynb  plot_pixel_readout_efficiency_pct.ipynb
cmake/: FindSystemC.cmake
config/: multipl_dist_fit.txt  multipl_dist_raw_bins.txt  settings.txt
doc/: Doxyfile.in
doc/html/: .gitignore
doc/img/: FROMU_FSM.xml  RRU_readout_clustering_fsm.xml
doc/pages/: main_page.md  overview.md  sim_data_output.md  sim_settings.md
latex/: .gitignore
software/alpide_dataflow_sim/: .gitignore  CMakeLists.txt
software/alpide_dataflow_sim/analysis/: CMakeLists.txt  DetectorStats.cpp  DetectorStats.hpp  ITSLayerStats.cpp  ITSLayerStats.hpp  LinkStats.cpp  LinkStats.hpp  Makefile  ReadoutUnitStats.cpp  ReadoutUnitStats.hpp  compare_simulations.C  misc.h  process_readout_trigger_stats.C
software/alpide_dataflow_sim/analysis/focal/: focal_detector_plane.cpp  focal_detector_plane.hpp  plot_sim_data.cpp  read_csv.cpp
software/alpide_dataflow_sim/analysis/py/: get_event_data.py  get_loss_multiplicity.py  its_chip_position.py  plot_busyv_multiplicity.py  plot_pileup.py  plot_sim_data_rate2_barchart.ipynb  plot_sim_data_rate_barchart.ipynb  plot_sim_data_rate_pct.ipynb  read_busy_event_files.py  read_settings.py  read_trig_action_files.py
software/alpide_dataflow_sim/config/: settings.txt
software/alpide_dataflow_sim/doc/img/: RRU_header_fsm.xml  RRU_pixel_readout.xml
software/alpide_dataflow_sim/doc/pages/: main_page.md
software/alpide_dataflow_sim/src/: main.cpp  version.hpp
software/alpide_dataflow_sim/src/AlpideDataParser/: AlpideDataParser.cpp  AlpideDataParser.hpp
software/alpide_dataflow_sim/src/CTP/: CTP.hpp
software/alpide_dataflow_sim/src/Detector/Common/: DetectorConfig.hpp  DetectorSimulationStats.cpp  DetectorSimulationStats.hpp  ITSModulesStaves.cpp  ITSModulesStaves.hpp
software/alpide_dataflow_sim/src/Detector/Focal/: FocalDetector.cpp  FocalDetector.hpp  FocalDetectorConfig.cpp  FocalDetectorConfig.hpp  FocalStaves.cpp  Focal_constants.hpp  Focal_creator.hpp
software/alpide_dataflow_sim/src/Detector/ITS/: ITSDetector.cpp  ITSDetector.hpp  ITSDetectorConfig.cpp  ITSDetectorConfig.hpp  ITS_constants.hpp  ITS_creator.hpp
software/alpide_dataflow_sim/src/Detector/PCT/: PCTDetector.cpp  PCTDetector.hpp  PCTDetectorConfig.hpp  PCT_constants.hpp  PCT_creator.hpp
software/alpide_dataflow_sim/src/Event/: EventBase.cpp  EventBase.hpp  EventBaseDiscrete.cpp  EventBaseDiscrete.hpp  EventBinary.cpp  EventBinary.hpp  EventBinaryITS.cpp  EventBinaryITS.hpp  EventDigits.hpp  EventGenBase.cpp  EventGenBase.hpp  EventGenITS.cpp  EventGenITS.hpp  EventGenPCT.cpp  EventGenPCT.hpp  EventRootFocal.cpp  EventRootFocal.hpp  EventRootPCT.cpp  EventXML.cpp  EventXML.hpp  EventXMLITS.cpp
software/alpide_dataflow_sim/src/ITS/: ITSDetector.cpp  ITSDetector.hpp  ITSModulesStaves.cpp  ITSModulesStaves.hpp  ITSPixelHit.hpp  ITSSimulationStats.cpp  ITSSimulationStats.hpp  ITS_config.hpp  ITS_constants.hpp  ITS_creator.hpp
software/alpide_dataflow_sim/src/ReadoutUnit/: BusyLinkWord.hpp  ReadoutUnit.cpp  ReadoutUnit.hpp
software/alpide_dataflow_sim/src/Settings/: Settings.cpp  Settings.hpp  parse_cmdline_args.cpp  parse_cmdline_args.hpp
software/alpide_dataflow_sim/src/Stimuli/: Stimuli.cpp  Stimuli.hpp  StimuliBase.cpp  StimuliBase.hpp  StimuliFocal.cpp  StimuliFocal.hpp  StimuliITS.cpp  StimuliITS.hpp  StimuliPCT.cpp  StimuliPCT.hpp
software/alpide_dataflow_sim/src/common/: Interfaces.hpp
software/alpide_dataflow_sim/src/event/: EventBase.cpp  EventBase.hpp  EventBinary.cpp  EventBinary.hpp  EventBinaryFormat.hpp  EventFrame.cpp  EventFrame.hpp  EventGenerator.cpp  EventGenerator.hpp  EventXML.cpp  EventXML.hpp  Hit.cpp  Hit.hpp  event_generator.cpp  hit.h  trigger_event.h
software/alpide_dataflow_sim/src/settings/: Settings.cpp  Settings.hpp  parse_cmdline_args.cpp  parse_cmdline_args.hpp  settings.cpp  settings.hpp
software/alpide_dataflow_sim/src/stimuli/: Stimuli.cpp  Stimuli.hpp  stimuli.h
software/alpide_dataflow_sim/src/unit_tests/: CMakeLists.txt  alpide_test.cpp  compile_instructions.txt  pixel_col_test.cpp  pixel_matrix_test.cpp
software/cmake/: README.md
src/: main.cpp  utils.hpp  version.hpp
src/Alpide/: Alpide.cpp  Alpide.hpp  AlpideDataWord.hpp  AlpideInterface.hpp  EventFrame.cpp  EventFrame.hpp  PixelFrontEnd.cpp  PixelFrontEnd.hpp  PixelHit.hpp  PixelPriorityEncoder.hpp  TopReadoutUnit.cpp  TopReadoutUnit.hpp
src/AlpideDataParser/: AlpideDataParser.hpp
src/Event/: EventBaseDiscrete.cpp  EventGenITS.hpp  EventGenPCT.cpp  EventRootFocal.hpp  EventRootPCT.cpp  EventRootPCT.hpp  EventXMLITS.hpp
src/ReadoutUnit/: BusyLinkWord.hpp  ReadoutUnit.hpp
src/Settings/: parse_cmdline_args.cpp
src/Stimuli/: StimuliPCT.cpp
src/alpide/: alpide.cpp  alpide.h  alpide_constants.h  data_format.h  fifo.cpp  fifo.h  pixel_col.cpp  pixel_col.h  pixel_matrix.cpp  pixel_matrix.h  pixel_region.cpp  pixel_region.h  region_readout.cpp  region_readout.h  top_readout.cpp  top_readout.h
src/alpide_toy_model/: alpide_constants.h  alpide_toy_model.h  compile_instructions.txt  pixel_col.cpp  pixel_col.h  pixel_col_test.cpp  pixel_matrix.cpp  pixel_matrix.h  (+1 more)
(+155 files in other folders)
